--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <div class="container">
         <section id="about" class="content-box">
             <h2>Who We Are</h2>
-            <p>Welcome to ECELL, the Entrepreneurship Cell of CU. We are a vibrant community of innovators, dreamers, and doers, dedicated to nurturing entrepreneurial talent and fostering a culture of innovation on campus.</p>
+            <p>Welcome to ECELL, the Entrepreneurship Cell of CU! We are a vibrant community dedicated to nurturing entrepreneurial talent and fostering innovation on campus. Through workshops, mentorship, competitions, and networking, we empower students to transform ideas into impactful ventures. Join us to innovate, inspire, and ignite the entrepreneurial spirit!</p>
         </section>
 
         <section class="content-box">
