--- a/Event.html
+++ b/Event.html
@@ -19,6 +19,10 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+            <div class="auth-buttons">
+                <a href="#" class="login">Login</a>
+                <a href="#" class="signup">Sign Up</a>
+            </div>
         </div>
     </header>
 
