--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Cell Login</title>
     <!-- Link the CSS file -->
-    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <!-- Top Navigation Bar -->
@@ -13,10 +13,10 @@
         <div class="nav-title">ECELL</div>
         <nav>
             <a href="#">HOME</a>
-            <a href="#">EVENTS</a>
-            <a href="#">ABOUT</a>
-            <a href="#">CONTACT US</a>
-            <a href="#" class="login-signup">Login/Sign Up</a>
+            <a href="event.html">EVENTS</a>
+            <a href="about.html">ABOUT</a>
+            <a href="contact.html">CONTACT US</a>
+            <a href="login.html" class="login-signup">Login/Sign Up</a>
         </nav>
     </header>
 
