--- a/Login.html
+++ b/Login.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Cell Login</title>
     <!-- Link the CSS file -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <!-- Top Navigation Bar -->
     <header class="navbar">
         <div class="nav-title">ECELL</div>
         <nav>
-            <a href="#">HOME</a>
-            <a href="#">EVENTS</a>
-            <a href="#">ABOUT</a>
-            <a href="#">CONTACT US</a>
-            <a href="#" class="login-signup">Login/Sign Up</a>
+            <a href="home.html">HOME</a>
+            <a href="event.html">EVENTS</a>
+            <a href="about.html">ABOUT</a>
+            <a href="contact.html">CONTACT US</a>
+            <a href="" class="login-signup">Login/Sign Up</a>
         </nav>
     </header>
 
@@ -35,7 +35,7 @@
         </div>
         <button type="submit" class="btn">Login</button>
         <p class="signup-link">
-            Don't have an account? <a href="#">Sign up</a>
+            Don't have an account? <a href="webdev.html">Sign up</a>
         </p>
     </form>
 </div>
