--- a/about.html
+++ b/about.html
@@ -10,12 +10,12 @@
     <nav class="navbar">
         <div class="logo">ECELL</div>
         <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="event.html">Events</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
-        <button class="login-signup">Login/Signup</button>
+        <button class="login-signup"><a href="login.html">Login/Signup</a></button>
     </nav>
     
     <div class="container">
