--- a/signup.html
+++ b/signup.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Create Account | E-Cell</title> 
-    <link rel="stylesheet" href="webdev.css"> 
+    <link rel="stylesheet" href="signup.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
 </head> 
 <body> 
-    <!-- Header -->
+     
     <header id="header"> 
         <a id="Ecell"><b>E-Cell</b></a> 
-        <a class="icons" href="#">HOME</a> 
-        <a class="icons" href="#">EVENTS</a> 
-        <a class="icons" href="#">ABOUT</a> 
-        <a class="icons" href="#">CONTACT US</a> 
+        <a class="icons" href="home.html">HOME</a> 
+        <a class="icons" href="event.html">EVENTS</a> 
+        <a class="icons" href="about.html">ABOUT</a> 
+        <a class="icons" href="contact.html">CONTACT US</a> 
         <button><a class="icons"><b>LOGIN/SIGNUP</b></a></button> 
-    </header> 
+    </header>  
 
     <!-- Main Box -->
     <div id="mainbx"> 
@@ -29,19 +29,19 @@
         <hr> 
 
         <!-- Form Section -->
-        <h1>Create Your Account</h1> 
+        <h1 style="color:black">Create Your Account</h1> 
         <form action="/action"> 
-            <label for="email"><b>Email</b></label> 
+            <label for="email" ><b>Email</b></label> 
             <input type="email" placeholder="Enter your email address" id="email" required> 
 
-            <label for="username"><b>Full Name</b></label> 
+            <label for="username" ><b>Full Name</b></label> 
             <input type="text" placeholder="Enter your full name" id="username" required> 
 
-            <label for="password"><b>Password</b></label> 
+            <label for="password" ><b>Password</b></label> 
             <input type="password" placeholder="Type to create a password" id="password" required> 
          
             <button id="login">Login</button> 
-            <button id="google">Sign Up with Google</button>     
+            <button id="google" style="color:white">Sign Up with Google</button>     
         </form> 
     </div> 
 </body> 
