--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <li><a href="#">About</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
-        <button class="login-signup"><a href="login.html">Login/Signup</a></button>
+        <button class="login-signup"><a href="login.html" style="color:black;text-decoration:none;">Login/Signup</a></button>
     </nav>
     
     <div class="container">
